@@ -78,7 +78,7 @@ public class PropertiesPanelSettings extends PanelSettings {
 
       componentSettings.put("XMLComboPanel.DisableCombo", properties.getProperty("XMLComboPanel.DisableCombo",""));
 
-      componentSettings.put("HistoryManager.Class", properties.getProperty("HistoryManager.Class","org.enhydra.jawe.HistoryMgr"));
+      componentSettings.put("HistoryManager.Class", properties.getProperty("HistoryManager.Class","org.enhydra.jawe.historymgr.HistoryMgr"));
       componentSettings.put("HistorySize", new Integer(properties.getProperty("HistorySize","25")));
 
       ImageIcon hicon;
